# rocm_pytorch

./: README.md  nathan_build.sh
aten/src/THH/: CMakeLists.txt  THH.h  THHAllocator.cpp  THHAllocator.h  THHApply.cuh  THHAsmUtils.cuh  THHAtomics.cuh  THHCachingHostAllocator.cpp  THHCachingHostAllocator.h  THHDeviceTensor-inl.cuh  THHDeviceTensor.cuh  THHDeviceTensorUtils-inl.cuh  THHDeviceTensorUtils.cuh  THHDeviceUtils.cuh  THHGeneral.cpp  THHGeneral.h  THHGeneral.h.in  THHGeneral.hpp  THHGenerateAllTypes.h  THHGenerateBFloat16Type.h  THHGenerateBoolType.h  THHGenerateByteType.h  THHGenerateCharType.h  THHGenerateComplexDoubleType.h  THHGenerateComplexFloatType.h  THHGenerateComplexTypes.h  THHGenerateDoubleType.h  THHGenerateFloatType.h  THHGenerateFloatTypes.h  THHGenerateHalfType.h  THHGenerateIntType.h  THHGenerateLongType.h  THHGenerateShortType.h  THHIntegerDivider.cuh  THHNumerics.cuh  THHReduceApplyUtils.cuh  THHReduceApplyUtils.hip  THHScanUtils.cuh  THHSleep.h  THHSleep.hip  (+25 more)
aten/src/THH/generic/: THHStorage.cpp  THHStorage.h  THHStorage.hip  THHStorageCopy.cpp  THHStorageCopy.h  THHStorageCopy.hip  THHTensor.cpp  THHTensor.h  THHTensor.hip  THHTensor.hpp  THHTensorCopy.h  THHTensorCopy.hip  THHTensorMath.h  THHTensorMath.hip  THHTensorMathMagma.cpp  THHTensorMathMagma.h  THHTensorMathPairwise.h  THHTensorMathPairwise.hip  THHTensorScatterGather.h  THHTensorScatterGather.hip
aten/src/THHUNN/: CMakeLists.txt  SharedMem.cuh  SpatialClassNLLCriterion.hip  SpatialConvolutionMM.hip  THHHalfAutoNumerics.cuh  THHUNN.h  common.h
aten/src/THHUNN/generic/: SpatialClassNLLCriterion.hip  SpatialConvolutionMM.hip  THHUNN.h
binaries/hip/: core_overhead_benchmark_gpu.cc  inspect_gpu.cc  print_core_object_sizes_gpu.cc
c10/hip/: HIPCachingAllocator.cpp  HIPCachingAllocator.h  HIPException.h  HIPFunctions.cpp  HIPFunctions.h  HIPGraphsC10Utils.h  HIPGuard.h  HIPMacros.h  HIPMathCompat.h  HIPMiscFunctions.cpp  HIPMiscFunctions.h  HIPStream.cpp  HIPStream.h
c10/hip/impl/: HIPGuardImpl.cpp  HIPGuardImpl.h  HIPTest.cpp  HIPTest.h  hip_cmake_macros.h.in
c10/hip/test/: CMakeLists.txt
caffe2/core/hip/: blob_gpu_test.cc  blob_serialization_gpu.cc  common_gpu.cc  common_gpu.h  context_gpu.h  context_gpu.hip  context_gpu_test.cc  event_gpu.cc  event_gpu_test.cc  net_gpu_test.cc  operator_gpu_test.cc
caffe2/db/hip/: create_db_op_gpu.cc
caffe2/distributed/hip/: file_store_handler_op_gpu.cc  redis_store_handler_op_gpu.cc
caffe2/image/hip/: image_input_op_gpu.cc  transform_gpu.h  transform_gpu.hip
caffe2/mpi/hip/: mpi_gpu_test.cc
caffe2/operators/hip/: abs_op.hip  accumulate_op.hip  accuracy_op.hip  acos_op.hip  affine_channel_op.hip  alias_with_name.hip  arg_ops.hip  asin_op.hip  assert_op.hip  async_net_barrier_op.hip  atan_op.hip  batch_gather_ops.hip  batch_matmul_op.hip  batch_matmul_op_gpu_test.cc  batch_moments_op.hip  batch_permutation_op.hip  batch_permutation_op_gpu_test.cc  batch_sparse_to_dense_op.hip  boolean_mask_ops.hip  boolean_unmask_ops.hip  bucketize_op.hip  cast_op.hip  cbrt_op.hip  ceil_op.hip  channel_backprop_stats_op.hip  channel_shuffle_op.hip  channel_stats_op.hip  clip_op.hip  communicator_op_gpu.cc  concat_split_op_gpu.cc  conv_op_gpu.cc  conv_op_shared_gpu.cc  conv_transpose_op_gpu.cc  copy_op.hip  cos_op.hip  cosh_op.hip  cosine_embedding_criterion_op.hip  counter_ops_gpu.cc  cross_entropy_op.hip  cube_op.hip  (+147 more)
caffe2/queue/hip/: queue_ops_gpu.cc
caffe2/sgd/hip/: adadelta_op_gpu.hip  adagrad_fused_op_gpu.cuh  adagrad_fused_op_gpu.hip  adagrad_op_gpu.hip  adam_op_gpu.hip  fp16_momentum_sgd_op.hip  fp32_momentum_sgd_op.hip  iter_op_gpu.cc  lars_op_gpu.hip  learning_rate_op_gpu.cc  momentum_sgd_op_gpu.hip  rmsprop_op_gpu.hip  weight_scale_op_gpu.cc  yellowfin_op_gpu.hip
torch/csrc/: CudaIPCTypes.cpp  CudaIPCTypes.h  DynamicTypes.cpp  Generator.cpp  Module.cpp  utils.h
(+452 files in other folders)
