set(ATen_HIP_SRCS ${ATen_HIP_SRCS}
${CMAKE_CURRENT_SOURCE_DIR}/SpatialClassNLLCriterion.hip
${CMAKE_CURRENT_SOURCE_DIR}/SpatialConvolutionMM.hip
PARENT_SCOPE)

set(ATen_HIP_INCLUDE ${ATen_HIP_INCLUDE}
  "${CMAKE_CURRENT_SOURCE_DIR}"
PARENT_SCOPE)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
  DESTINATION ${ATEN_INSTALL_INCLUDE_SUBDIR}
  FILES_MATCHING PATTERN "*.h" PATTERN "*.cuh")
